Fix confirm on small screen

--- a/src/client-app/app/globals.css
+++ b/src/client-app/app/globals.css
@@ -29,6 +29,7 @@ a {
 
 h2 {
   font-weight: normal;
+  text-align: center;
 }
 
 p {
