--- a/src/client-app/components/center/center.module.scss
+++ b/src/client-app/components/center/center.module.scss
@@ -8,6 +8,6 @@
   
   @media only screen and (max-width: 768px) {
     justify-content: flex-start;
-    padding-top: 40%;
+    padding: 40% .4em 0;
   }
 }
